--- a/views/userMeals.html
+++ b/views/userMeals.html
@@ -1,27 +1,9 @@
-<!DOCTYPE html>
 
-<html ng-app="Inventories">
-<head>
-    <title>User Inventory</title>
+<div class="row">	
+	<div class="small-2 large-4 columns"><h2>User Meals</h2></div>
+</div>	
 
-    <!-- Included CSS Files, use foundation.css if you do not want minified code -->
-  	<link rel="stylesheet" href="foundation.css">
-</head>
-
-<body>
-
-	<div class="row">	
-		<div class="small-2 large-4 columns"><h2>Meals</h2></div>
-	</div>	
-	
-	<div class="row">
-		<div class="small-1 large-1 columns"><a href="userInventory.html" class="button tiny">Inventory</a></div>
-		<div class="small-1 large-1 columns"><a href="userMeals.html" class="button tiny">Meals</a></div>
-		<div class="small-1 large-1 columns"><a href="userIngredients.html" class="button tiny">Ingredients</a></div>
-		<div class="small-1 large-1 columns end"><a href="userIndex.html" class="button tiny">Location</a></div>		
-	</div>
-
-	<div ng-controller="mealsController">
+<div ng-controller="mealsController">
 		<div class="row">
 			<div class="small-6 columns">			
 				<p> Total number of meals : {{ meals.length }}</p>							
@@ -47,7 +29,7 @@
 				</table>
 			</div>	
 
-			<div class="small-6 columns" ng-show="selected_meal.name">							
+			<!-- <div class="small-6 columns" ng-show="selected_meal.name">							
 				<div class="row">
 					<p><b>Update Meal</b> {{ selected_meal.name }}</p>
 				</div>
@@ -98,7 +80,7 @@
 					<a href="#" class="button tiny" ng-click="updateMeal()">Save</a>
 					<a href="#" class="button tiny" ng-click="clearMeal()">Cancel</a>
 				</div>
-			</div>
+			</div> -->
 		</div>
 	</div>		
 
@@ -116,15 +98,3 @@
 			<div class="small-3 large-4 columns"><button ng-click="newMeal()">Create Meal</button></div>
 		</div>
 	</div>
-
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.3/angular.min.js"></script>  
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.3/angular-route.js"></script>   
-    <script type="text/javascript" src="apps/inventories.js"></script>  
-    <script type="text/javascript" src="apps/ingredients.js"></script>
-    <script type="text/javascript" src="services/ingredient_service.js"></script>
-    <script type="text/javascript" src="controllers/ingredient_controller.js"></script>    
-    <script type="text/javascript" src="services/meal_service.js"></script>            
-    <script type="text/javascript" src="controllers/meal_controller.js"></script>            
-   
-</body>
-</html>
