--- a/views/userIngredients.html
+++ b/views/userIngredients.html
@@ -4,57 +4,51 @@
 </div>	
 
 <div ng-controller="ingredientsController">
-		<div class="row">
-			<div class="small-6 columns">			
-				<p> Total number of ingredients : {{ ingredients.length }}</p>							
-				<input ng-model="query" placeholder="Search">
-				<br>
-				<table>
-					<thead>
-					    <tr>
-					      	<th>Id</th>
-					      	<th>Name</th>
-					      	<th>Measurement</th>					      	
-					      	<th>Enabled</th>						      	
-					      	<th>Delete</th>		     
-					    </tr>
-				  	</thead>
-				  	<tbody>
-					    <tr ng-repeat="ingredient in ingredients | filter:query | orderBy:orderBy">
-					    	<td><a href="#" ng-click="editIngredient(ingredient.id)">{{ ingredient.id }}</a></td>
-					      	<td>{{ ingredient.name }}</td>
-					      	<td>{{ ingredient.unit }}</td>					      	
-					      	<td>{{ ingredient.enabled }}</td>					      	
-					      	<td><a href="#" ng-click="deleteIngredient(ingredient.id)">X</a></td>	      
-					    </tr>			   			  
-				  	</tbody>
-				</table>
-			</div>				
-			<div class="small-6 columns" ng-show="selected_ingredient.name">				
-				<br>
-				<p>Update company</p>
-				<br>
-				<input type="text" ng-model="selected_ingredient.name" value="{{ selected_ingredient.name }}" >
-				<input type="text" ng-model="selected_ingredient.unit" value="{{ selected_ingredient.unit }}" >
-				<input type="text" ng-model="selected_ingredient.enabled" value="{{ selected_ingredient.enabled }}" >
-				<a href="#" class="button" ng-click="updateIngredient()">Save</a>
-				<a href="#" class="button" ng-click="clearIngredient()">Cancel</a>
-			</div>
-		</div>
-	</div>		
-
 	<div class="row">
-		<div><br></div>
-	</div>
-
-	<div ng-controller="newIngredientController">
-		<div class="row">
-			<div class="small-4 large-4 columns"><b>Create new Ingredient</b></div>
-		</div>
-		<div class="row">
-			<div class="small-3 large-4 columns">Name :<input type="text" ng-model="new_ingredient_name"></div>
-			<div class="small-3 large-4 columns">Unit :<input type="text" ng-model="new_ingredient_unit"></div>
-			<div class="small-3 large-4 columns">Enabled :<input type="text" ng-model="new_ingredient_enabled"></div>			
-			<div class="small-3 large-4 columns"><button ng-click="newIngredient()">Create Ingredient</button></div>
+		<div class="small-6 columns">			
+			<p> Total number of ingredients : {{ ingredients.length }}</p>
+		</div>		
+	</div>					
+	<div class="row">
+		<div class="small-6 columns">
+			<input ng-model="query" placeholder="Search">
 		</div>
 	</div>
+	<div class="row">
+		<br>
+	</div>
+	<div class="row">
+		<div class="Small-12 columns">
+			<table>
+				<thead>
+				    <tr>
+				      	<th>Id</th>
+				      	<th>Name</th>
+				      	<th>Measurement</th>					      	
+				      	<th>Enabled</th>						      		     
+				    </tr>
+			  	</thead>
+			  	<tbody>
+				    <tr ng-repeat="ingredient in ingredients | filter:query | orderBy:orderBy">
+				    	<td><a href="#userEditIngredient/{{ ingredient.id }}">{{ ingredient.id }}</a></td>
+				      	<td>{{ ingredient.name }}</td>
+				      	<td>{{ ingredient.unit }}</td>					      	
+				      	<td>{{ ingredient.enabled }}</td>					      	      
+				    </tr>			   			  
+			  	</tbody>
+			</table>
+		</div>	
+	</div>			
+	<div class="row">
+		<div class="small-4 large-4 columns"><b>Create new Ingredient</b></div>
+	</div>
+	<div class="row">
+		<div class="small-3 large-4 columns"><input type="text" placeholder="Name" ng-model="new_ingredient_name"></div>
+		<div class="small-3 large-4 columns"><input type="text" placeholder="Unit" ng-model="new_ingredient_unit"></div>
+		<div class="small-3 large-4 columns"><input type="text" placeholder="Enabled" ng-model="new_ingredient_enabled"></div>	
+	</div>		
+	<div class="row">
+		<div class="small-3 large-4 columns"><button ng-click="newIngredient()">Create Ingredient</button></div>
+	</div>
+	</div>
+</div>
