--- a/views/userMeals.html
+++ b/views/userMeals.html
@@ -1,100 +1,45 @@
 
 <div class="row">	
-	<div class="small-2 large-4 columns"><h2>User Meals</h2></div>
+	<div class="small-2 large-4 columns"><h2>[User] Meals</h2></div>
 </div>	
 
 <div ng-controller="mealsController">
 		<div class="row">
 			<div class="small-6 columns">			
 				<p> Total number of meals : {{ meals.length }}</p>							
-				<input ng-model="query" placeholder="Search">
-				<br>
+					<div class="row">
+						<div class="small-6 columns">						
+							<input ng-model="query" placeholder="Search">
+						</div>
+					</div>
+				<div class="row">
+					<br>
+				</div>
 				<table>
 					<thead>
 					    <tr>
 					      	<th>Id</th>
 					      	<th>Name</th>					      					      
-					      	<th>Enabled</th>						      	
-					      	<th>Delete</th>		     
+					      	<th>Enabled</th>						      			     
 					    </tr>
 				  	</thead>
 				  	<tbody>
 					    <tr ng-repeat="meal in meals | filter:query | orderBy:orderBy">
-					    	<td><a href="#" ng-click="editMeal(meal.id)">{{ meal.id }}</a></td>
+					    	<td><a href="#userEditMeal/{{ meal.id }}">{{ meal.id }}</a></td>
 					      	<td>{{ meal.name }}</td>					      	
 					      	<td>{{ meal.enabled }}</td>					      	
-					      	<td><a href="#" ng-click="deleteMeal(meal.id)">X</a></td>	      
+					      	<!-- <td><a href="#" ng-click="deleteMeal(meal.id)">X</a></td>	       -->
 					    </tr>			   			  
 				  	</tbody>
 				</table>
 			</div>	
-
-			<!-- <div class="small-6 columns" ng-show="selected_meal.name">							
-				<div class="row">
-					<p><b>Update Meal</b> {{ selected_meal.name }}</p>
-				</div>
-				
-				<div class="row">
-					<input type="text" ng-model="selected_meal.name" value="{{ selected_meal.name }}" >				
-					<input type="text" ng-model="selected_meal.enabled" value="{{ selected_meal.enabled }}">
-				</div>
-				
-				<div class="row">
-					<div class="small-6 columns">Current Ingredients
-						<table>
-							<thead>
-							    <tr>
-							      	<th>Name</th>	
-							      	<th>Amount</th>
-							      	<th>Unit</th>				      					          
-							    </tr>
-						  	</thead>
-						  	<tbody>
-							    <tr ng-repeat="ingredient in selected_meal.ingredients | filter:query | orderBy:orderBy">
-							      	<td ng-click="pushToAvailableIngredients(selected_meal.id, ingredient.ingredient_id)">{{ ingredient.name }}</td>
-							      	<td><input type="text" value="{{ ingredient.amount }}" ng-blur="updateIngredientAmount(selected_meal.id, ingredient.ingredient_id, ingredient.amount)"></td>
-							      	<td>{{ ingredient.unit }}</td>
-							    </tr>			   		
-						  	</tbody>
-						</table>
-					</div>
-					<div class="small-6 columns">Available Ingredients
-						<table>
-							<thead>
-							    <tr>
-							      	<th>Name</th>					      					      	     
-							      	<th>Unit</th>
-							    </tr>
-						  	</thead>
-						  	<tbody>			 		
-							     <tr ng-repeat="ingredient in available_ingredients | filter:query | orderBy:orderBy">
-							      	<td ng-click="pushToCurrentIngredients(selected_meal.id, ingredient.id, 2)">{{ ingredient.name }}</td>
-							      	<td>{{ ingredient.unit }}</td>					      	      
-							    </tr>			   			   
-						  	</tbody>
-						</table>
-					</div>
-				</div>
-
-				<div class="row">
-					<a href="#" class="button tiny" ng-click="updateMeal()">Save</a>
-					<a href="#" class="button tiny" ng-click="clearMeal()">Cancel</a>
-				</div>
-			</div> -->
 		</div>
-	</div>		
-
-	<div class="row">
-		<br><br>
-	</div>
-
-	<div ng-controller="newMealController">
 		<div class="row">
 			<div class="small-4 large-4 columns"><b>Create new Meal</b></div>
 		</div>
 		<div class="row">
-			<div class="small-3 large-4 columns">Name :<input type="text" ng-model="new_meal_name"></div>			
-			<div class="small-3 large-4 columns">Enabled :<input type="text" ng-model="new_meal_enabled"></div>			
+			<div class="small-3 large-4 columns"><input type="text" placeholder="Name" ng-model="new_meal_name"></div>			
+			<div class="small-3 large-4 columns"><input type="text" placeholder="Enabled" ng-model="new_meal_enabled"></div>			
 			<div class="small-3 large-4 columns"><button ng-click="newMeal()">Create Meal</button></div>
 		</div>
 	</div>
