--- a/views/userStocks.html
+++ b/views/userStocks.html
@@ -21,9 +21,7 @@
 				      	<th>Name</th>
 				      	<th>Measurement</th>					      	
 				      	<th>Stock</th>						      		     
-				      	<th>Add</th>
-				      	<th>Remove</th>
-				      	<th>New Total</th>
+				      	<th>Actual Stock</th>
 				    </tr>
 			  	</thead>
 			  	<tbody>
@@ -32,24 +30,11 @@
 				      	<td>{{ stock.name }}</td>
 				      	<td>{{ stock.unit }}</td>					      	
 				      	<td>{{ stock.stock }}</td>					      	      
-				      	<td><input type="text" ng-model="addStock"></td>
-				      	<td><input type="text" ng-model="removeStock"></td>
-				      	<td><input type="text" ng-model="newTotal"></td>				      	
+				      	<td><input type="text" ng-model="actualStock"></td>	
+				      	<td><button class="tiny" ng-click="updateStock(stock, actualStock)">Save</button></td>			      	
 				    </tr>			   			  
 			  	</tbody>
 			</table>
 		</div>	
 	</div>			
-	<div class="row">
-		<div class="small-4 large-4 columns"><b>Create new Ingredient</b></div>
-	</div>
-	<div class="row">
-		<div class="small-3 large-4 columns"><input type="text" placeholder="Name" ng-model="new_ingredient_name"></div>
-		<div class="small-3 large-4 columns"><input type="text" placeholder="Unit" ng-model="new_ingredient_unit"></div>
-		<div class="small-3 large-4 columns"><input type="text" placeholder="Enabled" ng-model="new_ingredient_enabled"></div>	
-	</div>		
-	<div class="row">
-		<!-- <div class="small-3 large-4 columns"><button ng-click="newIngredient()">Create Ingredient</button></div> -->
-	</div>
-	</div>
 </div>
