--- a/views/userEditMeal.html
+++ b/views/userEditMeal.html
@@ -4,48 +4,50 @@
 </div>
 
 <div ng-controller="mealEditController">
+	
 	<div class="row">
-		<div class="small-6 columns" ng-show="selected_meal.name">							
-			<div class="row">
-				<label>Meal Name</label>
-				<input type="text" ng-model="selected_meal.name" value="{{ selected_meal.name }}" >	
+		<div class="small-6 columns" ng-show="selected_meal.name">										
+			<label>Meal Name</label>
+			<input type="text" ng-model="selected_meal.name" value="{{ selected_meal.name }}" >	
 
-				<label>Enabled</label>			
-				<input type="text" ng-model="selected_meal.enabled" value="{{ selected_meal.enabled }}">
-			</div>
+			<label>Enabled</label>			
+			<input type="text" ng-model="selected_meal.enabled" value="{{ selected_meal.enabled }}">			
 		</div>
 	</div>
-			
-	<div class="row">
-		<div class="small-6 columns">Current Ingredients
+
+	<div class="row">					
+		<div class="small-6 columns">
+			<h4>Ingredients Used</h4>
 			<table>
 				<thead>
 				    <tr>
-				      	<th>Name</th>	
+				      	<th>Ingredient</th>	
 				      	<th>Amount</th>
 				      	<th>Unit</th>				      					          
 				    </tr>
 			  	</thead>
 			  	<tbody>
 				    <tr ng-repeat="ingredient in selected_meal.ingredients | filter:query | orderBy:orderBy">
-				      	<td ng-click="pushToAvailableIngredients(selected_meal.id, ingredient.ingredient_id)">{{ ingredient.name }}</td>
-				      	<td><input type="text" class="small" value="{{ ingredient.amount }}" ng-blur="updateIngredientAmount(selected_meal.id, ingredient.ingredient_id, ingredient.amount)"></td>
-				      	<td>{{ ingredient.unit }}</td>
+				      	<td ng-click="removeIngredientFromMeal(selected_meal.id, ingredient.ingredient_id)">{{ ingredient.name }}</td>
+				      	<td><input type="text" class="small" ng-model="ingredient.amount" ng-blur="updateIngredientAmount(selected_meal.id, ingredient.ingredient_id, ingredient.amount, $index)"></td>
+				      	<td ng-class="{'button small disabled': ingredient.modified}">{{ ingredient.unit }}</td>
 				    </tr>			   		
 			  	</tbody>
 			</table>
 		</div>
-		<div class="small-6 columns">Available Ingredients
+				
+		<div class="small-6 columns">
+			<h4>Available Ingredients</h4>
 			<table>
 				<thead>
 				    <tr>
-				      	<th>Name</th>					      					      	     
+				      	<th>Ingredient</th>					      					      	     
 				      	<th>Unit</th>
 				    </tr>
 			  	</thead>
 			  	<tbody>			 		
 				     <tr ng-repeat="ingredient in available_ingredients | filter:query | orderBy:orderBy">
-				      	<td ng-click="pushToCurrentIngredients(selected_meal.id, ingredient.id, 2)">{{ ingredient.name }}</td>
+				      	<td ng-click="addIngredientToMeal(selected_meal.id, ingredient.id)">{{ ingredient.name }}</td>
 				      	<td>{{ ingredient.unit }}</td>					      	      
 				    </tr>			   			   
 			  	</tbody>
@@ -54,8 +56,10 @@
 	</div>
 	
 	<div class="row">
-		<button ng-click="updateMeal()">Save</button>
-		<a href="#userMeals" class="button">Cancel</a>
-		<button class="button alert" ng-click="deleteMeal(selected_meal.id)">Delete!</button>
+		<div class="small-12 columns">
+			<button ng-click="updateMeal()">Save</button>
+			<a href="#userMeals" class="button">Cancel</a>
+			<button class="button alert" ng-click="deleteMeal(selected_meal.id)">Delete!</button>
+		</div>
 	</div>
 </div>
