--- a/views/userReconciles.html
+++ b/views/userReconciles.html
@@ -1,9 +1,9 @@
 
 <div class="row">	
-	<div class="small-2 large-4 columns"><h2>User Stocks</h2></div>
+	<div class="small-8 columns"><h2>Reconcile Ingredient Stock</h2></div>
 </div>	
 
-<div ng-controller="stocksController">		
+<div ng-controller="reconcilesController">		
 	<div class="row">
 		<div class="small-6 columns">
 			<input ng-model="query" placeholder="Search">
@@ -25,16 +25,16 @@
 				    </tr>
 			  	</thead>
 			  	<tbody>
+				    <!-- <tr ng-repeat="stock in stocks | filter:query | orderBy:name" ng-hide="stock.reconciled"> Use this if you want the ingredient to go away so you can quickly go through them -->
 				    <tr ng-repeat="stock in stocks | filter:query | orderBy:name">
 				    	<td><a href="#userEditIngredient/{{ stock.id }}">{{ stock.id }}</a></td>
 				      	<td>{{ stock.name }}</td>
-				      	<td>{{ stock.unit }}</td>					      	
-				      	<td>{{ stock.stock }}</td>					      	      
-				      	<td><input type="text" ng-model="actualStock"></td>	
-				      	<td><button class="tiny" ng-click="updateStock(stock, actualStock)">Save</button></td>			      	
+				      	<td>{{ stock.unit }}</td>					      					      					      				      	
+				      	<td ng-class="{'button small disabled': stock.reconciled}">{{ stock.stock }}</td>
+				      	<td><input type="text" ng-model="stock.actualStock"></td>	
+				      	<td><button class="tiny" ng-show="stock.actualStock" ng-click="updateStock(stock, $index)">Save</button></td>			      	
 				    </tr>			   			  
 			  	</tbody>
 			</table>
 		</div>	
 	</div>			
-</div>
