--- a/views/userIngredients.html
+++ b/views/userIngredients.html
@@ -43,9 +43,9 @@
 		<div class="small-4 large-4 columns"><b>Create new Ingredient</b></div>
 	</div>
 	<div class="row">
-		<div class="small-3 large-4 columns"><input type="text" placeholder="Name" ng-model="new_ingredient_name"></div>
-		<div class="small-3 large-4 columns"><input type="text" placeholder="Unit" ng-model="new_ingredient_unit"></div>
-		<div class="small-3 large-4 columns"><input type="text" placeholder="Enabled" ng-model="new_ingredient_enabled"></div>	
+		<div class="small-3 large-4 columns"><input type="text" placeholder="Name" ng-model="new_ingredient.name"></div>
+		<div class="small-3 large-4 columns"><input type="text" placeholder="Unit" ng-model="new_ingredient.unit"></div>
+		<div class="small-3 large-4 columns"><input type="text" placeholder="Enabled" ng-model="new_ingredient.enabled"></div>	
 	</div>		
 	<div class="row">
 		<div class="small-3 large-4 columns"><button ng-click="newIngredient()">Create Ingredient</button></div>
