Updated file names, removing user, admin from them. updated headers. starting changing from clicking on ids to names for edit items. playing around wtih checkboxes. CURRENTLY BROKEN

--- a/views/editLocation.html
+++ b/views/editLocation.html
@@ -23,7 +23,7 @@
 			<input type="text" ng-model="selected_location.company_id" value="{{ selected_location.company_id }}" >
 	
 			<button ng-click="updateLocation()">Save</button>
-			<a href="#adminLocations" class="button">Cancel</a>
+			<a href="#locations" class="button">Cancel</a>
 			<button class="button alert" ng-click="deleteLocation(selected_location.id)">Delete!</button>
 		</div> 	
 	</div>
