--- a/views/editMeal.html
+++ b/views/editMeal.html
@@ -1,6 +1,6 @@
 
 <div class="row">	
-	<div class="small-12 columns"><h2>[User] Edit Meal</h2></div>
+	<div class="small-12 columns"><h2>Edit Meal</h2></div>
 </div>
 
 <div ng-controller="mealEditController">
@@ -58,7 +58,7 @@
 	<div class="row">
 		<div class="small-12 columns">
 			<button ng-click="updateMeal()">Save</button>
-			<a href="#userMeals" class="button">Cancel</a>
+			<a href="#meals" class="button">Cancel</a>
 			<button class="button alert" ng-click="deleteMeal(selected_meal.id)">Delete!</button>
 		</div>
 	</div>
