--- a/views/editCompany.html
+++ b/views/editCompany.html
@@ -13,7 +13,7 @@
 			<input type="text" ng-model="selected_company.enabled" value="{{ selected_company.enabled }}" >
 	
 			<button ng-click="updateCompany()">Save</button>
-			<a href="#adminCompanies" class="button">Cancel</a>
+			<a href="#companies" class="button">Cancel</a>
 			<button class="button alert" ng-click="deleteCompany(seleted_company.id)">Delete!</button>  
 		</div>
 	</div>
