--- a/views/editIngredient.html
+++ b/views/editIngredient.html
@@ -1,6 +1,6 @@
 
 <div class="row">	
-	<div class="small-12 columns"><h2>[User] Edit Ingredient</h2></div>
+	<div class="small-12 columns"><h2>Edit Ingredient</h2></div>
 </div>	
 
 <div ng-controller="ingredientEditController">	
@@ -13,7 +13,7 @@
 			<input type="text" ng-model="selected_ingredient.enabled" value="{{ selected_ingredient.enabled }}" >
 			
 			<button ng-click="updateIngredient()">Save</button>
-			<a href="#userIngredients" class="button">Cancel</a>
+			<a href="#ingredients" class="button">Cancel</a>
 			<button class="button alert" ng-click="deleteIngredient(selected_ingredient.id)">Delete!</button>  
 		</div>
 </div>
