--- a/views/mealSales.html
+++ b/views/mealSales.html
@@ -1,6 +1,6 @@
 
 <div class="row">	
-	<div class="small-2 large-4 columns"><h2>User Meal Stock</h2></div>
+	<div class="small-2 large-4 columns"><h2>Meal Sales</h2></div>
 </div>	
 
 <div ng-controller="stocksController">		
