removed ids to click on items, and now using the names as the link. changed the create meal/ingredient div to hide/show and up top when clicking the create new button. etc

--- a/views/editMeal.html
+++ b/views/editMeal.html
@@ -57,8 +57,7 @@
 	
 	<div class="row">
 		<div class="small-12 columns">
-			<button ng-click="updateMeal()">Save</button>
-			<a href="#meals" class="button">Cancel</a>
+			<button ng-click="updateMeal()">Done</button>
 			<button class="button alert" ng-click="deleteMeal(selected_meal.id)">Delete!</button>
 		</div>
 	</div>
