--- a/views/mealSales.html
+++ b/views/mealSales.html
@@ -20,7 +20,7 @@
 				      	<th>Id</th>
 				      	<th>Name</th>				      	
 				      	<th>Sold</th>					      	
-				      	<th>Waste</th>						      		     				      	
+				      	<th>Wasted</th>						      		     				      	
 				      	<th>Undo</th>
 				    </tr>
 			  	</thead>
