--- a/views/meals.html
+++ b/views/meals.html
@@ -1,42 +1,47 @@
 
-<div class="row">	
-	<div class="small-2 large-4 columns"><h2>Meals</h2></div>
-</div>	
-
 <div ng-controller="mealsController">
-		<div class="row">
-			<div class="small-6 columns">			
-				<p> Total number of meals : {{ meals.length }}</p>							
-					<div class="row">
-						<div class="small-6 columns">						
-							<input ng-model="query" placeholder="Search">
-						</div>
-					</div>
-				<div class="row">
-					<br>
-				</div>
-				<table>
-					<thead>
-					    <tr>
-					      	<th>Name</th>					      					      
-					      	<th>Enabled</th>						      			     
-					    </tr>
-				  	</thead>
-				  	<tbody>
-					    <tr ng-repeat="meal in meals | filter:query | orderBy:orderBy">
-					      	<td><a href="#editMeal/{{ meal.id }}">{{ meal.name }}</a></td>					      	
-					      	<td><input type="checkbox" ng-model="meal.enabled" ng-true-value="true" ng-false-value="false" ng-change="updateEnabled(meal)"></td>  	
-					    </tr>			   			  
-				  	</tbody>
-				</table>
-			</div>	
-		</div>
-		<div class="row">
-			<div class="small-4 large-4 columns"><b>Create new Meal</b></div>
-		</div>
-		<div class="row">
-			<div class="small-3 large-4 columns"><input type="text" placeholder="Name" ng-model="new_meal_name"></div>			
-			<div class="small-3 large-4 columns"><input type="text" placeholder="Enabled" ng-model="new_meal_enabled"></div>			
-			<div class="small-3 large-4 columns"><button ng-click="newMeal()">Create Meal</button></div>
+
+	<div class="row">	
+		<div class="small-2 columns"><h2>Meals</h2></div>
+		<div class="small-2 columns end"><button class="tiny" ng-click="showCreateMeal()">Create Meal</button></div>
+	</div>	
+	<div class="row">
+		<div class="small-12 columns" ng-show="createMealPushed">
+			<div class="row">
+				<div class="small-4 large-4 columns"><b>Create new Meal</b></div>
+			</div>
+			<div class="row">
+				<div class="small-3 large-4 columns"><input type="text" placeholder="Name" ng-model="new_meal_name"></div>			
+				<div class="small-3 large-4 columns"><input type="text" placeholder="Enabled" ng-model="new_meal_enabled"></div>			
+				<div class="small-3 large-4 columns"><button ng-click="newMeal()">Create Meal</button></div>
+			</div>
 		</div>
 	</div>
+	<div class="row">
+		<div class="small-6 columns">			
+			<p> Total number of meals : {{ meals.length }}</p>							
+				<div class="row">
+					<div class="small-6 columns">						
+						<input ng-model="query" placeholder="Search">
+					</div>
+				</div>
+			<div class="row">
+				<br>
+			</div>
+			<table>
+				<thead>
+				    <tr>
+				      	<th>Name</th>					      					      
+				      	<th>Enabled</th>						      			     
+				    </tr>
+			  	</thead>
+			  	<tbody>
+				    <tr ng-repeat="meal in meals | filter:query | orderBy:orderBy">
+				      	<td><a href="#editMeal/{{ meal.id }}">{{ meal.name }}</a></td>					      	
+				      	<td><input type="checkbox" ng-model="meal.enabled" ng-true-value="true" ng-false-value="false" ng-change="updateEnabled(meal)"></td>  	
+				    </tr>			   			  
+			  	</tbody>
+			</table>
+		</div>	
+	</div>
+</div>
