--- a/views/mealSales.html
+++ b/views/mealSales.html
@@ -26,7 +26,7 @@
 			  	</thead>
 			  	<tbody>				    
 				    <tr ng-repeat="stock in stocks | filter:query | orderBy:name" ng-hide="stock.reconciled">
-				    	<td><a href="#userEditMeal/{{ stock.id }}">{{ stock.id }}</a></td>
+				    	<td><a href="#editMeal/{{ stock.id }}">{{ stock.id }}</a></td>
 				      	<td>{{ stock.name }}</td>				      	      				      
 				      	<td><button class="tiny" ng-click="incrementSold($index)">+</td>	
 				      	<td><button class="tiny" ng-click="incrementWaste($index)">+</button></td>			      	
