--- a/assets/sass/_settings.scss
+++ b/assets/sass/_settings.scss
@@ -4,6 +4,8 @@
 
 // Uncomment to use rem-calc() in your settings
 @import 'bower_components/foundation/scss/foundation/functions';
+@import 'colors';
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
 
 // $experimental: true;
 
@@ -30,7 +32,7 @@ $rem-base: 16px;
 
 // $include-html-grid-classes: $include-html-classes;
 
-$row-width: rem-calc(1200);
+$row-width: rem-calc(1140);
 $column-gutter: rem-calc(10);
 $total-columns: 12;
 
@@ -38,6 +40,7 @@ $total-columns: 12;
 // $body-bg: #fff;
 // $body-font-color: #222;
 // $body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
+$body-font-family: "Open sans", sans-serif;
 // $body-font-weight: normal;
 // $body-font-style: normal;
 
@@ -50,7 +53,7 @@ $total-columns: 12;
 // $default-float: left;
 
 // We use these as default colors throughout
-// $primary-color: #008CBA;
+$primary-color: $enliten-light;
 // $secondary-color: #e7e7e7;
 // $alert-color: #f04124;
 // $success-color: #43AC6A;
