--- a/views/companies/companies.html
+++ b/views/companies/companies.html
@@ -1,70 +1,48 @@
-
-<div class="row">
-    <div class="small-12 columns"><h2>[Admin] Companies List</h2></div>
-</div>
-
 <div ng-controller="companiesController">
+
     <div class="row">
         <div class="small-6 columns">
-            <p> Total number of companies : {{ companies.length}}</p>
-            <div class="row">
-                <div class="small-6 columns">
-                    <input ng-model="query" placeholder="Search">
-                </div>
-            </div>
-            <div class="row">
-                <br>
-            </div>
-            <div class="row">
-                <div class="small-12 columns">
-                    <table>
-                        <thead>
-                            <tr>
-                                <th>Id</th>
-                                <th>Name</th>
-                                <th>Created</th>
-                                <th>Enabled</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr ng-repeat="company in companies | filter:query | orderBy:orderBy">
-                                <td><a href="#adminEditCompany/{{ company.id }}">{{ company.id }}</a></td>
-                                <td>{{ company.name }}</td>
-                                <td>{{ company.created_at }}</td>
-                                <td>{{ company.enabled }}</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
+            <h2>Admin Companies</h2>
+        </div>
+        <div class="small-4 small-offset-2 columns">
+            <input class="search" type="search" ng-model="query" placeholder="Search">
         </div>
     </div>
 
     <div class="row">
-        <div><br></div>
+        <div class="small-12 columns">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Id</th>
+                        <th>Name</th>
+                        <th>Created</th>
+                        <th>Enabled</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr ng-repeat="company in companies | filter:query | orderBy:orderBy">
+                        <td><a href="#adminEditCompany/{{ company.id }}">{{ company.id }}</a></td>
+                        <td>{{ company.name }}</td>
+                        <td>{{ company.created_at }}</td>
+                        <td>{{ company.enabled }}</td>
+                    </tr>
+                </tbody>
+            </table>
+            <p> Total number of companies : {{ companies.length}}</p>
+        </div>
     </div>
 
     <div class="row">
-        <div class="small-4 large-4 columns"><b>Create New Company</b></div>
-    </div>
-    <div class="row">
-        <div class="small-3 large-4 columns"><input type="text" placeholder="Name" ng-model="new_company_name"></div>
-        <div class="small-3 large-4 columns"><input type="text" placeholder="Enabled" ng-model="new_company_enabled"></div>
-        <div class="small-3 large-4 columns"><button ng-click="newCompany()">Create Company</button></div>
+        <div class="small-3 columns">
+            <input type="text" placeholder="New Company" ng-model="new_company_name">
+        </div>
+        <div class="small-2 columns">
+            <input id="enabled" type="checkbox" ng-model="new_company_enabled">
+            <label for="enabled">Enabled</label>
+        </div>
+        <div class="small-2 columns end">
+            <button class="small" ng-click="newCompany()">Create Company</button>
+        </div>
     </div>
 </div>
-
-<!-- <div class="row">
-    <div><br></div>
-</div>
-
-<div ng-controller="newCompanyController">
-    <div class="row">
-        <div class="small-4 large-4 columns"><b>Create New Company</b></div>
-    </div>
-    <div class="row">
-        <div class="small-3 large-4 columns"><input type="text" placeholder="Name" ng-model="new_company_name"></div>
-        <div class="small-3 large-4 columns"><input type="text" placeholder="Enabled" ng-model="new_company_enabled"></div>
-        <div class="small-3 large-4 columns"><button ng-click="newCompany()">Create Company</button></div>
-    </div>
-</div> -->
