Removed Ids from other pages, fixed the POST services to push newly returned resources

--- a/assets/sass/base.scss
+++ b/assets/sass/base.scss
@@ -1,2 +1,7 @@
 @import 'settings';
 @import 'bower_components/foundation/scss/foundation';
+
+a {
+  color: #00bfff;
+  text-decoration: underline;
+}
