--- a/views/locations/locations.html
+++ b/views/locations/locations.html
@@ -50,15 +50,15 @@
                     <input type="text" placeholder="Address" ng-model="new_location_address">
                 </div>
                 <div class="small-3 column">
-                    <input type="text" placeholder="City">
+                    <input type="text" placeholder="City" ng-model="new_location_city">
                 </div>
             </div>
             <div class="row">
                 <div class="small-3 column">
-                    <input type="text" placeholder="State">
+                    <input type="text" placeholder="State" ng-model="new_location_state">
                 </div>
                 <div class="small-3 column">
-                    <input type="text" placeholder="Zip">
+                    <input type="text" placeholder="Zip" ng-model="new_location_zip">
                 </div>
                 <div class="small-3 columns">
                     <input type="text" placeholder="Company id" ng-model="new_location_company_id">
