--- a/views/locations/locations.html
+++ b/views/locations/locations.html
@@ -5,7 +5,7 @@
             <h2>Admin Locations</h2>
         </div>
         <div class="small-4 small-offset-2 columns">
-            <input class="search" type="search" ng-model="query" placeholder="Search">
+            <input class="pad-top" type="search" ng-model="query" placeholder="Search">
         </div>
     </div>
 
