--- a/views/ingredients/editIngredient.html
+++ b/views/ingredients/editIngredient.html
@@ -1,19 +1,31 @@
-
 <div class="row">
-    <div class="small-12 columns"><h2>Edit Ingredient</h2></div>
+    <div class="small-12 columns">
+        <h2>Edit Ingredient</h2>
+    </div>
 </div>
 
 <div ng-controller="ingredientEditController">
-    <div class="small-6 columns" ng-show="selected_ingredient.name">
-            <br>
-            <p>Update company</p>
-            <br>
-            <input type="text" ng-model="selected_ingredient.name" value="{{ selected_ingredient.name }}" >
-            <input type="text" ng-model="selected_ingredient.unit" value="{{ selected_ingredient.unit }}" >
-            <input type="text" ng-model="selected_ingredient.enabled" value="{{ selected_ingredient.enabled }}" >
-
+    <div class="row">
+        <div class="small-3 columns">
+            <input type="text" ng-model="selected_ingredient.name" value="{{ selected_ingredient.name }}">
+        </div>
+        <div class="small-3 columns">
+            <input type="text" ng-model="selected_ingredient.unit" value="{{ selected_ingredient.unit }}">
+        </div>
+        <div class="small-2 columns end">
+            <input type="checkbox"
+                ng-model="selected_ingredient.enabled"
+                value="{{ selected_ingredient.enabled }}"
+                ng-true-value="1"
+                ng-false-value="0">
+            <label>Enabled</label>
+        </div>
+    </div>
+    <div class="row">
+        <div class="small-12 columns">
             <button ng-click="updateIngredient()">Save</button>
             <a href="#ingredients" class="button">Cancel</a>
             <button class="button alert" ng-click="deleteIngredient(selected_ingredient.id)">Delete!</button>
         </div>
+    </div>
 </div>
