--- a/views/meals/mealSales.html
+++ b/views/meals/mealSales.html
@@ -1,19 +1,15 @@
-
-<div class="row">
-    <div class="small-2 large-4 columns"><h2>Meal Sales</h2></div>
-</div>
-
 <div ng-controller="stocksController">
     <div class="row">
-        <div class="small-6 columns">
-            <input ng-model="query" placeholder="Search">
+        <div class="small-3 columns">
+            <h2>Meal Sales</h2>
+        </div>
+        <div class="small-3 columns">
+            <input type="search" class="pad-top" ng-model="query" placeholder="Search">
         </div>
     </div>
+
     <div class="row">
-        <br>
-    </div>
-    <div class="row">
-        <div class="Small-12 columns">
+        <div class="small-12 columns">
             <table>
                 <thead>
                     <tr>
@@ -26,7 +22,7 @@
                 <tbody>
                     <tr ng-repeat="stock in stocks | filter:query | orderBy:name" ng-hide="stock.reconciled">
                         <td><a href="#editMeal/{{ stock.id }}">{{ stock.name }}</a></td>
-                        <td><button class="tiny" ng-click="incrementSold($index)">+</td>
+                        <td><button class="tiny" ng-click="incrementSold($index)">+</button></td>
                         <td><button class="tiny" ng-click="incrementWaste($index)">+</button></td>
                         <td><button class="tiny" ng-show="stock.modified" ng-click="undo($index)">Undo</button></td>
                     </tr>
@@ -34,3 +30,4 @@
             </table>
         </div>
     </div>
+</div>
