--- a/views/meals/meals.html
+++ b/views/meals/meals.html
@@ -9,7 +9,7 @@
                     <input class="pad-top" type="text" ng-model="new_meal_name" placeholder="New Meal">
                 </div>
                 <div class="small-1 columns">
-                    <button class="button postfix pad-top" ng-click="newMeal()">New Meal</button>
+                    <button class="button postfix pad-top" ng-click="newMeal()">Add</button>
                 </div>
                 <div class="small-3 columns">
                     <input class="pad-top" type="search" ng-model="query" placeholder="Search">
