--- a/views/reconciles.html
+++ b/views/reconciles.html
@@ -1,16 +1,11 @@
-
-<div class="row">
-    <div class="small-8 columns"><h2>Reconcile Ingredient Stock</h2></div>
-</div>
-
 <div ng-controller="reconcilesController">
     <div class="row">
-        <div class="small-6 columns">
-            <input ng-model="query" placeholder="Search">
+        <div class="small-8 columns">
+            <h2>Reconcile Ingredient Stock</h2>
         </div>
-    </div>
-    <div class="row">
-        <br>
+        <div class="small-3 columns">
+            <input type="search" class="pad-top" ng-model="query" placeholder="Search">
+        </div>
     </div>
     <div class="row">
         <div class="Small-12 columns">
@@ -24,7 +19,6 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <!-- <tr ng-repeat="stock in stocks | filter:query | orderBy:name" ng-hide="stock.reconciled"> Use this if you want the ingredient to go away so you can quickly go through them -->
                     <tr ng-repeat="stock in stocks | filter:query | orderBy:name">
                         <td>{{ stock.name }}</td>
                         <td>{{ stock.unit }}</td>
